small spelling edits

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -310,7 +310,7 @@ Maximum $g_s$ increases with light environment, and is thus higher in the sun ex
 **Photosynthetic capacity is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
 This is primarily driven by the greater light available to sun-leaves, that also have traits (Table 1, Table 2) allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions. Photosynthesis increases with irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$. Light saturation levels differ between leaves and whole canopies with leaves saturating at lower light level than canopies; while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy.
 
-Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increased $VPD$ causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature, with the peak commonly found to correspond to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure (e.g. @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020 [temperate/boreal refs needed), and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; Sage & Kubien 2007; Varhammer et al. 2015). rreversible damage to photosystem II, leading to leaf necrosis and eventually leaf death occurs at $T_{leaf}$ of $40-60^{\circ}C$
+Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increased $VPD$ causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature, with the peak commonly found to correspond to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure (e.g. @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020 [temperate/boreal refs needed), and eventually due to biochemical constraints [@kumarathungeAcclimationAdaptationComponents2019a; @sageTemperatureResponseC32007; @varhammarPhotosyntheticTemperatureResponses2015]. rreversible damage to photosystem II, leading to leaf necrosis and eventually leaf death occurs at $T_{leaf}$ of $40-60^{\circ}C$
 [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
@@ -356,7 +356,7 @@ Specifically, increases are linked increased leaf area and in part to increasing
 The net foliar photosynthate production is allocated among functions including respiration, woody growth, foliar turnover, belowground allocation, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
 The proportion of GPP allocated to many of these increases with tree size, including ... foliar respiration (Table 2), reproduction [**REFS**; @westIncreasingRespiratoryCosts2020].
 NSC reserves also increase with tree size, such that larger trees have more buffer against biological and biophyical stressors [@niinemetsResponsesForestTrees2010a].
-As a result of increasing C allocation to these other functions, mass-specific -- and sometimes even absolute -- woody growth rates decrease with tree size [**REFS**; @anderson-teixeiraJointEffectsClimate2021].
+As a result of increasing C allocation to these other functions, mass-specific -- and sometimes even absolute -- woody growth rates decrease with tree size [**REFS**; @anderson-teixeiraJointEffectsClimate2021; @anderson-teixeiraCarbonCyclingMature2021].
 
 
 
@@ -378,7 +378,7 @@ Despite the potential for shorter trees in open forests to experience greater en
 
 There are, however, noteable exceptions to the pattern of greater growth reductions under high $T_{air}$ among larger trees.
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory].
-Similarly, in tropical forests higher night-time temperatures have been associated with decelerating tree growth rates predominantly in smaller trees *but also in taller trees* [*Clark 2010; 2013; Feeley et al. 2007*].
+Similarly, in tropical forests higher night-time temperatures have been associated with decelerating tree growth rates predominantly in smaller trees *but also in taller trees* [@clarkTropicalRainForest2003; @clarkAnnualWoodProduction2010; @feeleyDeceleratingGrowthTropical2007b; @vlamTemperatureRainfallStrongly2014*].
 Potential mechanisms for these patterns include increases in nighttime respiratory carbon loss that disproportionately reduced carbon availability for growth among small trees, or that understory $g_s$  might be stifled under humid conditions, resulting in higher $T_{leaf}$ (Fig. `r fig_leaf_T`) and lower photosynthesis. 
 It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. 
 Additional research is required to understand these mechanisms and to disentangle tree growth responses to hot-wet versus hot-dry conditions.
