--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -95,6 +95,23 @@
   number = {4}
 }
 
+@article{anderson-teixeiraCarbonCyclingMature2021,
+  title = {Carbon Cycling in Mature and Regrowth Forests Globally},
+  author = {Anderson-Teixeira, Kristina J and Herrmann, Valentine and Banbury Morgan, Rebecca and Bond-Lamberty, Ben and Cook-Patton, Susan C and Ferson, Abigail E and Muller-Landau, Helene C and Wang, Maria M H},
+  date = {2021-05-01},
+  journaltitle = {Environ. Res. Lett.},
+  volume = {16},
+  pages = {053009},
+  issn = {1748-9326},
+  doi = {10.1088/1748-9326/abed01},
+  url = {https://iopscience.iop.org/article/10.1088/1748-9326/abed01},
+  urldate = {2021-07-21},
+  abstract = {Forests are major components of the global carbon (C) cycle and thereby strongly influence atmospheric carbon dioxide (CO2) and climate. However, efforts to incorporate forests into climate models and CO2 accounting frameworks have been constrained by a lack of accessible, global-scale synthesis on how C cycling varies across forest types and stand ages. Here, we draw from the Global Forest Carbon Database, ForC, to provide a macroscopic overview of C cycling in the world’s forests, giving special attention to stand age-related variation. Specifically, we use 11 923 ForC records for 34 C cycle variables from 865 geographic locations to characterize ensemble C budgets for four broad forest types—tropical broadleaf evergreen, temperate broadleaf, temperate conifer, and boreal. We calculate means and standard deviations for both mature and regrowth (age {$<$} 100 years) forests and quantify trends with stand age in regrowth forests for all variables with sufficient data. C cycling rates generally decreased from tropical to temperate to boreal in both mature and regrowth forests, whereas C stocks showed less directional variation. Mature forest net ecosystem production did not differ significantly among biomes. The majority of flux variables, together with most live biomass pools, increased significantly with the logarithm of stand age. As climate change accelerates, understanding and managing the carbon dynamics of forests is critical to forecasting, mitigation, and adaptation. This comprehensive and synthetic global overview of C stocks and fluxes across biomes and stand ages contributes to these efforts.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ETRSTW4I\\Anderson-Teixeira et al. - 2021 - Carbon cycling in mature and regrowth forests glob.pdf},
+  langid = {english},
+  number = {5}
+}
+
 @article{anderson-teixeiraSizerelatedScalingTree2015,
   title = {Size-Related Scaling of Tree Form and Function in a Mixed-Age Forest},
   author = {Anderson-Teixeira, Kristina J. and McGarvey, Jennifer C. and Muller-Landau, Helene C. and Park, Janice Y. and Gonzalez-Akre, Erika B. and Herrmann, Valentine and Bennett, Amy C. and So, Christopher V. and Bourg, Norman A. and Thompson, Jonathan R. and McMahon, Sean M. and McShea, William J.},
@@ -1406,6 +1423,27 @@
   number = {2}
 }
 
+@article{clarkTropicalRainForest2003,
+  title = {Tropical Rain Forest Tree Growth and Atmospheric Carbon Dynamics Linked to Interannual Temperature Variation during 1984–2000},
+  author = {Clark, D. A. and Piper, S. C. and Keeling, C. D. and Clark, D. B.},
+  date = {2003-05-13},
+  journaltitle = {PNAS},
+  volume = {100},
+  pages = {5852--5857},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.0935903100},
+  url = {http://www.pnas.org/content/100/10/5852},
+  urldate = {2021-07-21},
+  abstract = {During 1984–2000, canopy tree growth in old-growth tropical rain forest at La Selva, Costa Rica, varied {$>$}2-fold among years. The trees' annual diameter increments in this 16-yr period were negatively correlated with annual means of daily minimum temperatures. The tree growth variations also negatively covaried with the net carbon exchange of the terrestrial tropics as a whole, as inferred from nearly pole-to-pole measurements of atmospheric carbon dioxide (CO2) interpreted by an inverse tracer–transport model. Strong reductions in tree growth and large inferred tropical releases of CO2 to the atmosphere occurred during the record-hot 1997–1998 El Niño. These and other recent findings are consistent with decreased net primary production in tropical forests in the warmer years of the last two decades. As has been projected by recent process model studies, such a sensitivity of tropical forest productivity to on-going climate change would accelerate the rate of atmospheric CO2 accumulation.},
+  eprint = {12719545},
+  eprinttype = {pmid},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\I36MFZSQ\\Clark et al. - 2003 - Tropical rain forest tree growth and atmospheric c.pdf;C\:\\Users\\Me\\Zotero\\storage\\5XYXHZ4K\\5852.html},
+  isbn = {9780935903102},
+  langid = {english},
+  number = {10}
+}
+
 @article{clarkTropicalRainForest2015,
   title = {Tropical {{Rain Forest Structure}}, {{Tree Growth}} and {{Dynamics}} along a 2700-m {{Elevational Transect}} in {{Costa Rica}}},
   author = {Clark, David B. and Hurtado, Johanna and Saatchi, Sassan S.},
@@ -1726,6 +1764,13 @@
   urldate = {2020-07-05},
   langid = {english},
   number = {46}
+}
+
+@online{DeceleratingGrowthTropical,
+  title = {Decelerating Growth in Tropical Forest Trees - {{Feeley}} - 2007 - {{Ecology Letters}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/10.1111/j.1461-0248.2007.01033.x},
+  urldate = {2021-07-21},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BL5AMFGD\\j.1461-0248.2007.01033.html}
 }
 
 @article{defrenneGlobalBufferingTemperatures2019,
@@ -2209,6 +2254,25 @@
   urldate = {2021-05-20},
   abstract = {The impacts of global change on tropical forests remain poorly understood. We examined changes in tree growth rates over the past two decades for all species occurring in large (50-ha) forest dynamics plots in Panama and Malaysia. Stem growth rates declined significantly at both forests regardless of initial size or organizational level (species, community or stand). Decreasing growth rates were widespread, occurring in 24—71\% of species at Barro Colorado Island, Panama (BCI) and in 58—95\% of species at Pasoh, Malaysia (depending on the sizes of stems included). Changes in growth were not consistently associated with initial growth rate, adult stature, or wood density. Changes in growth were significantly associated with regional climate changes: at both sites growth was negatively correlated with annual mean daily minimum temperatures, and at BCI growth was positively correlated with annual precipitation and number of rainfree days (a measure of relative insolation). While the underlying cause(s) of decelerating growth is still unresolved, these patterns strongly contradict the hypothesized pantropical increase in tree growth rates caused by carbon fertilization. Decelerating tree growth will have important economic and environmental implications.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\J92YTGZ8\\Feeley et al. - 2007 - Decelerating growth in tropical forest trees.pdf},
+  langid = {english},
+  number = {6}
+}
+
+@article{feeleyDeceleratingGrowthTropical2007b,
+  title = {Decelerating Growth in Tropical Forest Trees},
+  author = {Feeley, Kenneth J. and Wright, S. Joseph and Supardi, M. N. Nur and Kassim, Abd Rahman and Davies, Stuart J.},
+  date = {2007},
+  journaltitle = {Ecology Letters},
+  volume = {10},
+  pages = {461--469},
+  issn = {1461-0248},
+  doi = {10.1111/j.1461-0248.2007.01033.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1461-0248.2007.01033.x},
+  urldate = {2021-07-21},
+  abstract = {The impacts of global change on tropical forests remain poorly understood. We examined changes in tree growth rates over the past two decades for all species occurring in large (50-ha) forest dynamics plots in Panama and Malaysia. Stem growth rates declined significantly at both forests regardless of initial size or organizational level (species, community or stand). Decreasing growth rates were widespread, occurring in 24–71\% of species at Barro Colorado Island, Panama (BCI) and in 58–95\% of species at Pasoh, Malaysia (depending on the sizes of stems included). Changes in growth were not consistently associated with initial growth rate, adult stature, or wood density. Changes in growth were significantly associated with regional climate changes: at both sites growth was negatively correlated with annual mean daily minimum temperatures, and at BCI growth was positively correlated with annual precipitation and number of rainfree days (a measure of relative insolation). While the underlying cause(s) of decelerating growth is still unresolved, these patterns strongly contradict the hypothesized pantropical increase in tree growth rates caused by carbon fertilization. Decelerating tree growth will have important economic and environmental implications.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1461-0248.2007.01033.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\XBHKZNLA\\Feeley et al. - 2007 - Decelerating growth in tropical forest trees.pdf;C\:\\Users\\Me\\Zotero\\storage\\UV22WGGR\\j.1461-0248.2007.01033.html},
+  keywords = {Carbon cycling,carbon fertilization,climate change,forest dynamics,tree growth rates},
   langid = {english},
   number = {6}
 }
@@ -7469,6 +7533,25 @@
   number = {8}
 }
 
+@article{sageTemperatureResponseC32007,
+  title = {The Temperature Response of {{C3}} and {{C4}} Photosynthesis},
+  author = {Sage, Rowan F. and Kubien, David S.},
+  date = {2007},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {30},
+  pages = {1086--1106},
+  issn = {1365-3040},
+  doi = {10.1111/j.1365-3040.2007.01682.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-3040.2007.01682.x},
+  urldate = {2021-07-21},
+  abstract = {We review the current understanding of the temperature responses of C3 and C4 photosynthesis across thermal ranges that do not harm the photosynthetic apparatus. In C3 species, photosynthesis is classically considered to be limited by the capacities of ribulose 1·5-bisphosphate carboxylase/oxygenase (Rubisco), ribulose bisphosphate (RuBP) regeneration or Pi regeneration. Using both theoretical and empirical evidence, we describe the temperature response of instantaneous net CO2 assimilation rate (A) in terms of these limitations, and evaluate possible limitations on A at elevated temperatures arising from heat-induced lability of Rubisco activase. In C3 plants, Rubisco capacity is the predominant limitation on A across a wide range of temperatures at low CO2 ({$<$}300 µbar), while at elevated CO2, the limitation shifts to Pi regeneration capacity at suboptimal temperatures, and either electron transport capacity or Rubisco activase capacity at supraoptimal temperatures. In C4 plants, Rubisco capacity limits A below 20 °C in chilling-tolerant species, but the control over A at elevated temperature remains uncertain. Acclimation of C3 photosynthesis to suboptimal growth temperature is commonly associated with a disproportional enhancement of the Pi regeneration capacity. Above the thermal optimum, acclimation of A to increasing growth temperature is associated with increased electron transport capacity and/or greater heat stability of Rubisco activase. In many C4 species from warm habitats, acclimation to cooler growth conditions increases levels of Rubisco and C4 cycle enzymes which then enhance A below the thermal optimum. By contrast, few C4 species adapted to cooler habitats increase Rubisco content during acclimation to reduced growth temperature; as a result, A changes little at suboptimal temperatures. Global change is likely to cause a widespread shift in patterns of photosynthetic limitation in higher plants. Limitations in electron transport and Rubisco activase capacity should be more common in the warmer, high CO2 conditions expected by the end of the century.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-3040.2007.01682.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\LZ64L7YT\\Sage and Kubien - 2007 - The temperature response of C3 and C4 photosynthes.pdf;C\:\\Users\\Me\\Zotero\\storage\\VEI3GYQH\\j.1365-3040.2007.01682.html},
+  keywords = {acclimation,CO2 and temperature interactions,electron transport,global change,Rubisco,Rubisco activase},
+  langid = {english},
+  number = {9}
+}
+
 @article{sanchesDifferentialLeafTraits2010,
   title = {Differential Leaf Traits of a Neotropical Tree {{Cariniana}} Legalis ({{Mart}}.) {{Kuntze}} ({{Lecythidaceae}}): Comparing Saplings and Emergent Trees},
   shorttitle = {Differential Leaf Traits of a Neotropical Tree {{Cariniana}} Legalis ({{Mart}}.) {{Kuntze}} ({{Lecythidaceae}})},
@@ -8672,6 +8755,12 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\J6QWUGKJ\\195588519.html}
 }
 
+@online{TemperatureResponseC3,
+  title = {The Temperature Response of {{C3}} and {{C4}} Photosynthesis - {{SAGE}} - 2007 - {{Plant}}, {{Cell}} \&amp; {{Environment}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/10.1111/j.1365-3040.2007.01682.x},
+  urldate = {2021-07-21}
+}
+
 @article{terashimaIrradiancePhenotypeComparative2006,
   title = {Irradiance and Phenotype: Comparative Eco-Development of Sun and Shade Leaves in Relation to Photosynthetic {{CO2}} Diffusion},
   shorttitle = {Irradiance and Phenotype},
@@ -9184,6 +9273,23 @@
   keywords = {canopy closure,canopy tree,forest overstory,forest understory,leaf unfolding,ontogenic changes,phenology,vertical temperature gradient},
   langid = {english},
   number = {1}
+}
+
+@article{vlamTemperatureRainfallStrongly2014,
+  title = {Temperature and Rainfall Strongly Drive Temporal Growth Variation in {{Asian}} Tropical Forest Trees},
+  author = {Vlam, Mart and Baker, Patrick J. and Bunyavejchewin, Sarayudh and Zuidema, Pieter A.},
+  date = {2014-04-01},
+  journaltitle = {Oecologia},
+  volume = {174},
+  pages = {1449--1461},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-013-2846-x},
+  url = {https://doi.org/10.1007/s00442-013-2846-x},
+  urldate = {2021-07-21},
+  abstract = {Climate change effects on growth rates of tropical trees may lead to alterations in carbon cycling of carbon-rich tropical forests. However, climate sensitivity of broad-leaved lowland tropical trees is poorly understood. Dendrochronology (tree-ring analysis) provides a powerful tool to study the relationship between tropical tree growth and annual climate variability. We aimed to establish climate–growth relationships for five annual-ring forming tree species, using ring-width data from 459 canopy and understory trees from a seasonal tropical forest in western Thailand. Based on 183/459 trees, chronologies with total lengths between 29 and 62~years were produced for four out of five species. Bootstrapped correlation analysis revealed that climate–growth responses were similar among these four species. Growth was significantly negatively correlated with current-year maximum and minimum temperatures, and positively correlated with dry-season precipitation levels. Negative correlations between growth and temperature may be attributed to a positive relationship between temperature and autotrophic respiration rates. The positive relationship between growth and dry-season precipitation levels likely reflects the strong water demand during leaf flush. Mixed-effect models yielded results that were consistent across species: a negative effect of current wet-season maximum temperatures on growth, but also additive positive effects of, for example, prior dry-season maximum temperatures. Our analyses showed that annual growth variability in tropical trees is determined by a combination of both temperature and precipitation variability. With rising temperature, the predominantly negative relationship between temperature and growth may imply decreasing growth rates of tropical trees as a result of global warming.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\A2EAJIVX\\Vlam et al. - 2014 - Temperature and rainfall strongly drive temporal g.pdf},
+  langid = {english},
+  number = {4}
 }
 
 @article{vogelConvectiveCoolingLow1970,
