incorporating Krista's google doc changes
will get back to google doc comments tomorrow

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9698,6 +9698,25 @@
   number = {5}
 }
 
+@article{wuGrowthDeclineLinked2012,
+  title = {Growth {{Decline Linked}} to {{Warming}}-{{Induced Water Limitation}} in {{Hemi}}-{{Boreal Forests}}},
+  author = {Wu, Xiuchen and Liu, Hongyan and Guo, Dali and Anenkhonov, Oleg A. and Badmaeva, Natalya K. and Sandanov, Denis V.},
+  date = {2012-08-15},
+  journaltitle = {PLOS ONE},
+  volume = {7},
+  pages = {e42619},
+  publisher = {{Public Library of Science}},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0042619},
+  url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0042619},
+  urldate = {2021-07-21},
+  abstract = {Hemi-boreal forests, which make up the transition from temperate deciduous forests to boreal forests in southern Siberia, have experienced significant warming without any accompanying increase in precipitation during the last 80 years. This climatic change could have a profound impact on tree growth and on the stability of forest ecosystems in this region, but at present evidence for these impacts is lacking. In this study, we report a recent dramatic decline in the growth of hemi-boreal forests, based on ring width measurements from three dominant tree-species (Pinus sylvestris, Larix sibirica and Larix gmelinii), sampled from eight sites in the region. We found that regional tree growth has become increasingly limited by low soil water content in the pre- and early-growing season (from October of the previous year to July of the current year) over the past 80 years. A warming-induced reduction in soil water content has also increased the climate sensitivity of these three tree species. Beginning in the mid-1980s, a clear decline in growth is evident for both the pine forests and the larch forests, although there are increasing trends in the proxy of soil water use efficiencies. Our findings are consistent with those from other parts of the world and provide valuable insights into the regional carbon cycle and vegetation dynamics, and should be useful for devising adaptive forest management strategies.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\97WVF4C6\\Wu et al. - 2012 - Growth Decline Linked to Warming-Induced Water Lim.pdf},
+  keywords = {Climate change,Forests,Insects,Linear regression analysis,Pines,Seasons,Trees,Water resources},
+  langid = {english},
+  number = {8}
+}
+
 @article{wykaResponsesLeafStructure2012,
   title = {Responses of Leaf Structure and Photosynthetic Properties to Intra-Canopy Light Gradients: A Common Garden Test with Four Broadleaf Deciduous Angiosperm and Seven Evergreen Conifer Tree Species},
   shorttitle = {Responses of Leaf Structure and Photosynthetic Properties to Intra-Canopy Light Gradients},
